# SMEIoT

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  SMEIoT.sln  dependencies.md
benchmark/: export_values.sql  multipleClients.sh  stresstest.c
samples/: mosquitto-broker-config  mosquitto-pub.conf.sample  mosquitto.conf.sample  mosquitto.service.sample  postgresql.conf.sample  smeiot.service.sample  sysctl.conf.sample
samples/mosquitto-device-client/: esp32_code_LOLIND32.c  multi_topic_pub.c  pi.c
scripts/: bootstrap.sh  build_mosquitto.sh  build_smeiot.sh  configure_system_runtime.sh  rebuild_js_api_client.sh  remote_bootstrap_for_pi.sh  setup_database.sh  setup_stage_database.sh  setup_test_db.sh  travis.sh
src/: .gitignore
src/ClientApiSdkGen/: config.json  swagger.json
src/ClientApp/: .eslintrc.json  .gitignore  READMD.md  package-lock.json  package.json  tsconfig.json
src/ClientApp/public/: index.html
src/ClientApp/src/: DashboardApp.tsx  EditUser.tsx  ForgotPassword.tsx  RootApp.tsx  SMEIoTApp.tsx  avatars.tsx  index.tsx  routes.tsx  theme.ts
src/Mosquitto/: CMakeLists.txt  client.c  client.h
src/MosquittoPlugin/: CMakeLists.txt  auth.c  auth.h
src/SMEIoT.Core/: IAuditTimestamp.cs  SMEIoT.Core.csproj
src/SMEIoT.Core/Entities/: AutoExpiredSet.cs  Device.cs  DeviceAuthenticationType.cs  MqttBrokerConnectionInformation.cs  MqttEntityBase.cs  MqttMessage.cs  Sensor.cs  SensorValue.cs  SettingItem.cs  SettingItemDescriptor.cs  Settings.cs  SettingsBase.cs  SystemHighlights.cs  User.cs  UserSensor.cs
src/SMEIoT.Core/EventHandlers/: MosquittoMessageHandler.cs
src/SMEIoT.Core/Exceptions/: EntityExistException.cs  EntityNotFoundException.cs  IncorrectUnitOfWorkUsageException.cs  InternalException.cs  InvalidArgumentException.cs  InvalidUserInputException.cs
src/SMEIoT.Core/Helpers/: RangeQueryValidations.cs  SettingAttributeHelpers.cs  SettingPropertyHelpers.cs
src/SMEIoT.Core/Interfaces/: IApplicationDbConnection.cs  IApplicationDbContext.cs  IAuditTimestamp.cs  IDashboardService.cs  IDeviceSensorIdentifierSuggestService.cs  IDeviceSensorIdentifierSuggester.cs  IDeviceService.cs  IIdentifierDictionaryFileAccessor.cs  IMosquittoBrokerMessageService.cs  IMosquittoBrokerPidAccessor.cs  IMosquittoBrokerPluginPidService.cs  ISensorService.cs  (+27 more)
src/SMEIoT.Infrastructure/: DbConnectionStringExtensions.cs  GlobalSuppressions.cs  InfrastructureSetup.cs  NpgsqlNodaTimeDbContextOptionsBuilderExtensions.cs  SMEIoT.Infrastructure.csproj  StartupSetup.cs
src/SMEIoT.TagHelpers/: .gitignore  DomJsonTagHelper.cs  SMEIoT.TagHelpers.csproj
src/SMEIoT.Web/: .gitignore  CustomProblemDetailsFactory.cs  HangfireActivator.cs  Program.cs  README.md  SMEIoT.Web.csproj  ServerSetup.cs  SlugifyParameterTransformer.cs  Startup.cs  StartupConfigureIdentity.cs  StartupConfigureIdentityOptions.cs  StartupIdentityDataInitializer.cs  SwaggerDefaultValues.cs  appsettings.Development.json  appsettings.Staging.json  appsettings.Test.json  appsettings.json  common-passwords.txt  identifier-candidates.txt
test/SMEIoT.IntegrationTests/: SMEIoT.IntegrationTests.csproj  SeedWebApplicationFactory.cs  TestStartup.cs  appsettings.Test.json
test/SMEIoT.Tests/: SMEIoT.Tests.csproj  appsettings.Development.json  appsettings.json  common-passwords.txt  identifier-candidates.txt
(+366 files in other folders)
